Optimize interface and user expérience.

--- a/extension.yaml
+++ b/extension.yaml
@@ -1,6 +1,6 @@
-﻿Name: Generic Plugin
+﻿Name: SuccessStory
 Author: Lacro59
-Version: 0.1a
+Version: 0.2a
 Module: SuccessStory.dll
 Type: GenericPlugin
 Icon: icon.png
