--- a/SuccessStory.csproj
+++ b/SuccessStory.csproj
@@ -39,6 +39,14 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="OriginLibrary">
+      <HintPath>Ressources\OriginLibrary.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Playnite.Common">
+      <HintPath>Ressources\Playnite.Common.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Playnite.SDK, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\PlayniteSDK.5.2.0\lib\net462\Playnite.SDK.dll</HintPath>
       <Private>False</Private>
@@ -62,6 +70,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clients\Origin.cs" />
     <Compile Include="Commons\TransformIcon.cs" />
     <Compile Include="Models\GameAchievements.cs" />
     <Compile Include="Models\Achievements.cs" />
