--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LiveCharts" version="0.9.7" targetFramework="net462" />
-  <package id="LiveCharts.Wpf.FixTooltip" version="0.9.8" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="PlayniteSDK" version="5.2.0" targetFramework="net462" />
 </packages>
